Feat: Added simple GUI for the downloader.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
+# Virtual environment
 .venv
+
+# Downloads folder
 downloads
+
+# Python cache and compiled files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
