--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-gallery-dl>=1.26.0
 requests>=2.31.0
 beautifulsoup4>=4.12.0
-
+gallery-dl>=1.26.0
+# Note: Tkinter is built into Python, no separate installation needed
